--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,11 @@
     </head>
 
     <body class="page-body">
-        <header class="header"></header>
+        <header class="header flex-cc">
+          <div class="logo flex-cc">
+            <img src="img/logo.png" alt="Логотип">
+          </div>
+        </header>
 
         <main class="page"></main>
 
