--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,36 @@
 
     <body class="page-body">
         <header class="header flex-cc">
-          <div class="logo flex-cc">
-            <img src="img/logo.png" alt="Логотип">
-          </div>
+            <div class="container">
+                <a class="logo flex-cc" href="/">
+                    <img src="img/logo.png" alt="Логотип" />
+                </a>
+            </div>
         </header>
-
-        <main class="page"></main>
+        <main class="page">
+            <section class="intro">
+                <div class="container">
+                    <div class="intro-content">
+                        <img
+                            class="intro-image"
+                            src="img/main_banner-logo.png"
+                            alt="Баннер"
+                        />
+                        <div class="intro-lead_magnet flex flex-col flex-cs">
+                            <div class="intro-lead_magnet-info flex-cc flex-col">
+                                <p class=" intro-lead_magnet-info_text">
+                                    <span class="red">Жми</span> на кнопку<br> и забирай
+                                    <span class="red">подарок</span>
+                                </p>
+                                <img class="arrow" src="img/arrow_down.svg" alt="">
+                                <a href="/" class="btn btn--primary shadow-red intro-lead_magnet-btn">Получить подарок</a>
+                            </div>
+                            <img class="intro-lead_magnet-image" src="img/lead_drink.png" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <footer class="footer"></footer>
 
