Вставка лид магнит и секция About

--- a/app/index.html
+++ b/app/index.html
@@ -39,16 +39,89 @@
                             alt="Баннер"
                         />
                         <div class="intro-lead_magnet flex flex-col flex-cs">
-                            <div class="intro-lead_magnet-info flex-cc flex-col">
-                                <p class=" intro-lead_magnet-info_text">
-                                    <span class="red">Жми</span> на кнопку<br> и забирай
+                            <div
+                                class="intro-lead_magnet-info flex-cc flex-col"
+                            >
+                                <p class="intro-lead_magnet-info_text">
+                                    <span class="red">Жми</span> на кнопку и
+                                    забирай шот или пиво в
                                     <span class="red">подарок</span>
                                 </p>
-                                <img class="arrow" src="img/arrow_down.svg" alt="">
-                                <a href="/" class="btn btn--primary shadow-red intro-lead_magnet-btn">Получить подарок</a>
+                                <img
+                                    class="arrow"
+                                    src="img/arrow_down.svg"
+                                    alt=""
+                                />
+                                <a
+                                    href="/"
+                                    class="link btn--primary shadow-red intro-lead_magnet-btn"
+                                    >Получить подарок</a
+                                >
                             </div>
-                            <img class="intro-lead_magnet-image" src="img/lead_drink.png" alt=""/>
+                            <img
+                                class="intro-lead_magnet-image"
+                                src="img/lead_drink.png"
+                                alt=""
+                            />
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about">
+                <div class="container">
+                    <div class="flex flex-col about-wrapper">
+                        <div class="about-info">
+                            <h2 class="title title--sm about-info_title">
+                                О НАШЕМ <span class="red">ЗАВЕДЕНИИ</span>
+                            </h2>
+                            <p class="text-size--sm about-info_text">
+                                Бар «Ну, и Че?» работает по системе тру-кост.<br> Здесь
+                                ты платишь за вход, а напитки и еда ПО
+                                СЕБЕСТОИМОСТИ.<br />
+                                Вход в бар:<br />
+                                ✔️ стоимость входа в бар ср, чт, вс 150₽, пт-сб 350₽
+                                <br />✔️ По четвергам и средам акция на вход
+                                «Счастливые часы»: вход бесплатный вместо 150₽
+                                <br />✔️ вход строго 18+, при себе обязательно иметь
+                                оригинал паспорта или водительские права
+                            </p>
+                        </div>
+                        <div class="about-swiper swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide about-swiper_slide">
+                                        <img src="img/bar_slider/bar1.jpg" alt="Изображение 1">
+                                    </div>
+                                    <div class="swiper-slide about-swiper_slide">
+                                        <img src="img/bar_slider/bar2.jpg" alt="Изображение 2">
+                                    </div>
+                                    <div class="swiper-slide about-swiper_slide">
+                                        <img src="img/bar_slider/bar3.jpg" alt="Изображение 3">
+                                    </div>
+                                    <div class="swiper-slide about-swiper_slide">
+                                        <img src="img/bar_slider/bar4.jpg" alt="Изображение 4">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination about_swiper-pagination"></div>
+                                <div class="swiper-buttons">
+                                    <button data-about="prev" class="swiper-button-prev flex-cc">
+                                        <svg class="icon">
+                                            <use
+                                                xlink:href="img/sprite.svg#arrow_left"
+                                            ></use>
+                                        </svg>
+                                    </button>
+                                    <button data-about="next" class="swiper-button-next flex-cc">
+                                        <svg class="icon">
+                                            <use
+                                                xlink:href="img/sprite.svg#arrow_right"
+                                            ></use>
+                                        </svg>
+                                    </button>
+
+                                </div>
+                        </div>
+
+
                     </div>
                 </div>
             </section>
